# crookedstorm.github.io

./: .gitignore  .prettierignore  AGENTS.md  CNAME  COPYRIGHT.md  LICENSE-CODE.md  astro.config.mjs  eslint.config.js  feed.xml  index.html  package-lock.json  package.json  rust-toolchain.toml  sitemap.xml  tsconfig.json
.github/workflows/: actionlint.yml  deploy.yml  site.yml
.pi/agent/: pi-permissions.jsonc
404/: index.html
about/: index.html
archive/legacy-static-site/blog/: index.html
blog/a-man-is-not-dead-while-his-name-is/: index.html
blog/fun-article-for-your-morning/: index.html
blog/good-times-and-rough-roads-in-ny-state/: index.html
blog/page2/: index.html
blog/reusables-handkerchiefs-rags-and-napkins/: index.html
blog/very-close/: index.html
categories/fluff/: index.html
categories/review/: index.html
engine/: Cargo.toml
engine/src/: components.rs  lib.rs  maze.rs  rng.rs  state.rs  systems.rs  world.rs
public/: robots.txt
public/legacy/: blog.code-workspace  feed.xml  index.html
src/components/: SiteNav.astro
src/engine/: index.ts
src/layouts/: BaseLayout.astro
src/pages/: 404.astro  about.astro  blog.astro  index.astro  projects.astro  world.astro
src/scripts/: world.ts
src/styles/: global.css
tags/backpacking/: index.html
tags/books/: index.html
tags/caravan/: index.html
tags/coast/: index.html
tags/hiking/: index.html
tags/nautical/: index.html
tags/nerdlife/: index.html
tags/pics/: index.html
tags/pioneering/: index.html
tags/shaving/: index.html
tags/winter/: index.html
(+56 files in other folders)
