[package]
name = "engine"
version = "0.1.0"
edition = "2024"
description = "Game simulation engine for Wanderings and Misadventures"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true